--- a/src/app/mainPage/about-me/about-me.component.html
+++ b/src/app/mainPage/about-me/about-me.component.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="profile">
-        <img src="kopf.png" alt="ich">
+        <img src="./2.hero\icon\kopf.png" alt="ich">
         <div class="profile-line"></div>
     </div>
 </section>
