--- a/src/app/mainPage/about-me/about-me.component.scss
+++ b/src/app/mainPage/about-me/about-me.component.scss
@@ -43,7 +43,7 @@
                     width: 40px;
 
                     img {
-                        width: 100%;
+                        width: 50px;
                         height: auto;
                         margin-top: -10px;
                     }
@@ -95,6 +95,43 @@
         z-index: -1;
     }
 }
+
+@media (max-width: 1024px) {
+    .about-section {
+        .text-content {
+            h1 {
+                font-size: 48px;
+                margin-top: 99px;
+            }
+
+            p {
+                font-size: 15px;
+            }
+
+            .features .feature p {
+                font-size: 15px;
+
+                img {
+                    width: 70px;
+                    height: auto;
+                    margin-top: -10px;
+                }
+            }
+        }
+
+        .profile img {
+            width: 200px;
+            height: 200px;
+        }
+
+        .profile-line {
+            right: -150px;
+        }
+    }
+}
+
+
+
 
 // Anpassungen für mittlere Bildschirme
 @media (max-width: 1000px) {
