--- a/src/app/mainPage/contact-line/contact-line.component.scss
+++ b/src/app/mainPage/contact-line/contact-line.component.scss
@@ -31,6 +31,46 @@ h1 {
     color: white;
 }
 
+@media(max-width: 1024px){
+    .contactLine {
+        background-color: #141d2f;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .line {
+        display: flex
+        ;
+            align-items: center;
+            margin-top: 74px;
+    
+    }
+    
+    .img {
+        display: flex;
+        align-items: center;
+        margin-right: 30px;
+        height: 2px;
+    }
+    
+    .img img {
+        width: 25vh;
+        height: 100%;
+    }
+    
+    h1 {
+        margin: 0;
+        font-size: 90px;
+        color: white;
+    }
+
+}
+
+
+
+
+
 @media(max-width:950px){
     .contactLine {
         background-color: #141d2f;
