--- a/src/app/mainPage/rezession/rezession.component.scss
+++ b/src/app/mainPage/rezession/rezession.component.scss
@@ -293,6 +293,93 @@ body {
     }
 }
 
+
+@media(max-width: 640px) {
+
+    .testimonial-section {
+        background-color: #141D2F; 
+        padding: 50px;
+        color: white;
+
+        .testimonial-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 50px;
+            padding: 61px 0px;
+            margin-top: 69px;
+
+            .quote-box {
+                flex: 1; 
+                max-width: 600px; 
+                border: 2px solid #70e61c; 
+                border-radius: 15px;
+                padding: 30px;
+                position: relative;
+
+                .quote-icon {
+                    position: absolute;
+                    top: -45px;
+                    left: -20px;
+                    font-size: 3rem;
+                    color: #9747FF;
+                    font-weight: bold;
+                }
+
+                .quote-text {
+                    font-size: 15px;
+                    line-height: 1.8;
+                    margin-bottom: 20px;
+                    color: white;
+                    font-weight: 300;
+                }
+
+                .author {
+                    font-size: 14px;
+                    line-height: 1.5;
+                    text-align: right;
+                    color: #cfd1d4;
+
+                    span {
+                        color: #ffffff;
+                        font-weight: bold;
+                    }
+                }
+            }
+
+            .profile-box-container {
+                display: flex; 
+                align-items: center; 
+                gap: 10px; 
+
+                .profile-box {
+                    position: relative; 
+                    width: 167px;
+                    height: 167px;
+                    border: 5px solid #9747FF; 
+                    border-radius: 50%; 
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    .profile-picture {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+
+                .profile-line {
+                    width: 100px; 
+                    height: 3px; 
+                  
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 404px) {
     .testimonial-section {
         padding: 20px;
@@ -307,7 +394,7 @@ body {
             >.profile {
                 .profile-line {
                     position: relative;
-                    width: 77px;
+                    width: 76px;
                     height: 3px;
                     background-color: #9747FF;
                     top: 50%;
@@ -382,6 +469,16 @@ body {
                     width: 144px;
                     height: 144px;
                     object-fit: cover;
+                }
+                .profile-line {
+                    display: none;
+                    position: relative;
+                    width: 41px;
+                    height: 3px;
+                    background-color: #00FF00;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    right: 0px;
                 }
 
             }
