--- a/src/app/mainPage/rezession/rezession.component.scss
+++ b/src/app/mainPage/rezession/rezession.component.scss
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -8,7 +7,7 @@ body {
 
 
 .testimonial-section {
-    background-color: #141D2F; 
+    background-color: #141D2F;
     color: white;
 
     .testimonial-container {
@@ -18,13 +17,13 @@ body {
         gap: 50px;
         padding: 61px 155px;
         margin-top: 69px;
-        min-height: 300px; 
+        min-height: 300px;
 
         .quote-box {
-            flex: 1; 
-            max-width: 600px; 
+            flex: 1;
+            max-width: 600px;
             // min-height: 200px; // Feste Mindesthöhe
-            border: 2px solid #70e61c; 
+            border: 2px solid #70e61c;
             border-radius: 15px;
             padding: 30px;
             position: relative;
@@ -45,7 +44,7 @@ body {
                 margin-bottom: 20px;
                 color: white;
                 font-weight: 400;
-                white-space: normal; 
+                white-space: normal;
                 overflow-wrap: break-word;
             }
 
@@ -91,25 +90,25 @@ body {
 
     .navigation-dots {
         position: absolute;
-        left: 50%; 
+        left: 50%;
         transform: translateX(-50%);
         margin-bottom: 10px;
         cursor: pointer;
 
         img {
-            width: 100px; 
+            width: 100px;
             height: auto;
 
             @media (max-width: 950px) {
-                width: 80px; 
+                width: 80px;
             }
 
             @media (max-width: 694px) {
-                width: 60px; 
+                width: 60px;
             }
 
             @media (max-width: 404px) {
-                width: 40px; 
+                width: 40px;
             }
         }
     }
@@ -122,7 +121,7 @@ body {
 @media(max-width: 950px) {
 
     .testimonial-section {
-        background-color: #141D2F; 
+        background-color: #141D2F;
 
         color: white;
 
@@ -136,9 +135,9 @@ body {
             padding-left: 100px;
 
             .quote-box {
-                flex: 1; 
-                max-width: 600px; 
-                border: 2px solid #70e61c; 
+                flex: 1;
+                max-width: 600px;
+                border: 2px solid #70e61c;
                 border-radius: 15px;
                 padding: 30px;
                 position: relative;
@@ -174,16 +173,16 @@ body {
             }
 
             .profile-box-container {
-                display: flex; 
-                align-items: center; 
-                gap: 10px; 
+                display: flex;
+                align-items: center;
+                gap: 10px;
 
                 .profile-box {
-                    position: relative; 
+                    position: relative;
                     width: 167px;
                     height: 167px;
-                    border: 5px solid #9747FF; 
-                    border-radius: 50%; 
+                    border: 5px solid #9747FF;
+                    border-radius: 50%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -197,8 +196,8 @@ body {
                 }
 
                 .profile-line {
-                    width: 44px !important; 
-                    height: 3px; 
+                    width: 44px !important;
+                    height: 3px;
                 }
             }
         }
@@ -210,7 +209,7 @@ body {
 @media(max-width: 694px) {
 
     .testimonial-section {
-        background-color: #141D2F; 
+        background-color: #141D2F;
         padding: 50px;
         color: white;
 
@@ -223,9 +222,9 @@ body {
             margin-top: 69px;
 
             .quote-box {
-                flex: 1; 
-                max-width: 600px; 
-                border: 2px solid #70e61c; 
+                flex: 1;
+                max-width: 600px;
+                border: 2px solid #70e61c;
                 border-radius: 15px;
                 padding: 30px;
                 position: relative;
@@ -261,16 +260,16 @@ body {
             }
 
             .profile-box-container {
-                display: flex; 
-                align-items: center; 
-                gap: 10px; 
+                display: flex;
+                align-items: center;
+                gap: 10px;
 
                 .profile-box {
-                    position: relative; 
+                    position: relative;
                     width: 167px;
                     height: 167px;
-                    border: 5px solid #9747FF; 
-                    border-radius: 50%; 
+                    border: 5px solid #9747FF;
+                    border-radius: 50%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -284,20 +283,130 @@ body {
                 }
 
                 .profile-line {
-                    width: 100px; 
-                    height: 3px; 
-                  
+                    width: 100px;
+                    height: 3px;
+
                 }
             }
         }
     }
 }
 
+@media(max-width: 680px) {
+
+    .testimonial-section {
+        padding: 20px;
+        text-align: center;
+
+        .testimonial-container {
+            flex-direction: column-reverse;
+            align-items: center;
+            gap: 20px;
+            margin-top: -24px;
+
+            >.profile {
+                .profile-line {
+                    position: relative;
+                    width: 76px;
+                    height: 3px;
+                    background-color: #9747FF;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    right: 0px;
+                }
+            }
+
+            .profile-box-container {
+                order: -1;
+                flex-direction: column;
+                align-items: center;
+                margin-bottom: 20px;
+
+                .profile-box {
+                    width: 144px;
+                    height: 144px;
+                    border: 3px solid #9747FF;
+
+                    >img {
+                        border: 3px solid #00FF00;
+                        border-radius: 50%;
+                        width: 144px;
+                        height: 144px;
+                        object-fit: cover;
+                    }
+                }
+
+
+            }
+
+            .quote-box {
+                max-width: 90%;
+                padding: 15px;
+                border-radius: 10px;
+                text-align: left;
+
+                .quote-icon {
+                    top: -34px;
+                    left: -18px;
+                    font-size: 2rem;
+
+                    >img {
+                        height: 48px;
+                    }
+                }
+
+                .quote-text {
+                    font-size: 16px;
+                    line-height: 1.6;
+                }
+
+                .author {
+                    font-size: 12px;
+                    margin-top: 153px;
+                    padding-right: 142px;
+                }
+            }
+
+            .profile {
+                display: none;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                z-index: 1;
+                padding-left: 145px;
+                margin-top: 109px;
+
+                >img {
+                    border: 4px solid #9747FF;
+                    border-radius: 50%;
+                    width: 144px;
+                    height: 144px;
+                    object-fit: cover;
+                }
+
+                .profile-line {
+                    display: none;
+                    position: relative;
+                    width: 41px;
+                    height: 3px;
+                    background-color: #00FF00;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    right: 0px;
+                }
+
+            }
+        }
+    }
+}
+
+
+
 
 @media(max-width: 640px) {
 
     .testimonial-section {
-        background-color: #141D2F; 
+        background-color: #141D2F;
         padding: 50px;
         color: white;
 
@@ -310,9 +419,9 @@ body {
             margin-top: 69px;
 
             .quote-box {
-                flex: 1; 
-                max-width: 600px; 
-                border: 2px solid #70e61c; 
+                flex: 1;
+                max-width: 600px;
+                border: 2px solid #70e61c;
                 border-radius: 15px;
                 padding: 30px;
                 position: relative;
@@ -348,16 +457,16 @@ body {
             }
 
             .profile-box-container {
-                display: flex; 
-                align-items: center; 
-                gap: 10px; 
+                display: flex;
+                align-items: center;
+                gap: 10px;
 
                 .profile-box {
-                    position: relative; 
+                    position: relative;
                     width: 167px;
                     height: 167px;
-                    border: 5px solid #9747FF; 
-                    border-radius: 50%; 
+                    border: 5px solid #9747FF;
+                    border-radius: 50%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -371,9 +480,9 @@ body {
                 }
 
                 .profile-line {
-                    width: 100px; 
-                    height: 3px; 
-                  
+                    width: 100px;
+                    height: 3px;
+
                 }
             }
         }
@@ -470,6 +579,7 @@ body {
                     height: 144px;
                     object-fit: cover;
                 }
+
                 .profile-line {
                     display: none;
                     position: relative;
