--- a/src/app/mainPage/about-me/about-me.component.html
+++ b/src/app/mainPage/about-me/about-me.component.html
@@ -21,7 +21,7 @@
                 <div class="icon">
                     <img src="./2.hero\icon\puzzle.png"alt=""> 
                 </div>
-                <p>In my profession, programming isn’t just about writing code; it’s a creative form of problem-solving.</p>
+                <p  id="skills"     >In my profession, programming isn’t just about writing code; it’s a creative form of problem-solving.</p>
             </div>
             <div class="lila">
                 <img src="./background\purple.png" alt="">
