--- a/src/app/mainPage/about-me/about-me.component.scss
+++ b/src/app/mainPage/about-me/about-me.component.scss
@@ -249,6 +249,8 @@
         align-items: center;
         height: auto; // Ersetzt 96vh
         padding: 20px;
+        text-decoration: none;
+
 
         .text-content {
             max-width: 100%;
