--- a/src/app/mainPage/contact-line/contact-line.component.html
+++ b/src/app/mainPage/contact-line/contact-line.component.html
@@ -1,4 +1,4 @@
-<div class="contactLine">
+<div id="contact"    class="contactLine">
     <div class="line">
         <div class="img">
            
