--- a/src/app/mainPage/mainPage.component.html
+++ b/src/app/mainPage/mainPage.component.html
@@ -1,7 +1,7 @@
 <section>
     <app-titel-view-me class="test"></app-titel-view-me>
     
-        <img class="shape" src="HeroBackground.png" alt="">
+        <!-- <img class="shape" src="HeroBackground.png" alt=""> -->
     
     <app-github-links></app-github-links>
     <app-about-me></app-about-me>
