--- a/src/app/mainPage/skills/skills.component.html
+++ b/src/app/mainPage/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section id="skills" class="skills-section">
+<section  class="skills-section">
     <div class="skills-grid">
         <div class="skill">
             <img src="./skills\html.png" alt="">
