--- a/src/app/mainPage/titel-view-me/titel-view-me.component.html
+++ b/src/app/mainPage/titel-view-me/titel-view-me.component.html
@@ -1,4 +1,5 @@
 <section id="arrowUp"  >
+    <img class="shape" src="HeroBackground.png" alt="">
     <div class="content-wrapper">
        
         <div class="background-green"></div>
