--- a/src/app/mainPage/skills/skills.component.scss
+++ b/src/app/mainPage/skills/skills.component.scss
@@ -73,6 +73,7 @@
             display: flex;
             justify-content: flex-end;
             margin-top: 30px;
+            text-decoration: none;
 
             button {
                 background-color: #70e61c;
