--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,15 +3,16 @@
     padding: 0;
     font-family: 'Poppins';
     scroll-behavior: smooth;
+
 }
+
+html {
+overflow-x: hidden;
+}
+
 body{
   background-color: #141D2F;
 }
-// app-titel-view {
-//   z-index: 100000000;
-//     position: relative;
-
-// }
 
 
 
